crates/tau-cli/tests/snapshots/help_snapshots__run_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
Invoke an agent one-shot

Usage: tau run [OPTIONS] <AGENT_ID> [PROMPT]

Arguments:
  <AGENT_ID>
          Identifier of the agent to invoke

  [PROMPT]
          Prompt for the agent. If omitted, read from stdin

Options:
      --max-turns <MAX_TURNS>
          Override RunOptions::max_turns

      --dry-run
          Validate setup without invoking the LLM

      --no-install
          Skip auto-install of missing requires.tools dependencies. If anything would need fetching, exit 2 with copy-pasteable `tau install <url>` hints instead

      --stream
          Stream events as they arrive. Text deltas appear inline on stdout; tool annotations on stderr. With --json, emits one JSON object per event line (text_delta / tool_call_started / tool_call_completed / turn_completed / run_completed)

      --max-total-tokens <TOKENS>
          Maximum cumulative input + output tokens across all agents spawned in the run. When the budget is exceeded, the run aborts with `RunStatus::Aborted`. Unset = no limit

      --max-total-duration-secs <SECS>
          Maximum wall-clock duration of the run, in seconds. When the budget is exceeded, the run aborts with `RunStatus::Aborted`. Unset = no limit

      --max-total-agents <N>
          Maximum number of agents that may be spawned across the run (root + descendants). When exceeded, the run aborts with `RunStatus::Aborted`. Unset = no limit

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

      --no-sandbox
          Disable sandboxing entirely for this invocation (shorthand for `--sandbox passthrough`). For development and one-off debugging. Auditable in shell history

      --sandbox <SANDBOX>
          Force a specific sandbox adapter kind, overriding the resolver. `--no-sandbox` is shorthand for `--sandbox passthrough`. Conflicts with `--no-sandbox` if both set

          Possible values:
          - native:      Linux landlock + seccomp + namespaces
          - container:   Docker / Podman shell-out
          - passthrough: No isolation (explicit opt-out)

      --otlp-endpoint <URL>
          Export traces over OTLP/gRPC to this endpoint, e.g. `https://otel.example.com:4317`. Falls back to `OTEL_EXPORTER_OTLP_ENDPOINT` env var. Auth + tenant headers come from `OTEL_EXPORTER_OTLP_HEADERS` (comma-separated `key=value` pairs). Requires the `otlp` cargo feature (on by default)
          
          [env: OTEL_EXPORTER_OTLP_ENDPOINT=]

  -h, --help
          Print help (see a summary with '-h')
