crates/tau-cli/tests/snapshots/help_snapshots__top_level_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
tau runtime CLI

Usage: tau [OPTIONS] <COMMAND>

Commands:
  init       Scaffold a project `tau.toml`
  install    Install a package from a Git URL
  list       List installed packages or available agents
  run        Invoke an agent one-shot
  chat       Open a REPL chat session with an agent
  resolve    Install missing requires.tools dependencies for all agents in the project tau.toml. Project-wide form of the lazy resolve that `tau run` and `tau chat` perform per-agent
  uninstall  Uninstall a package and remove its lockfile entry
  verify     Verify installed packages against the lockfile (spec §3)
  update     Update an installed package to a newer or specific version (spec §2)
  plugin     Plugin debugging utilities (spec §9 debug tier)
  session    Session management (list, show, delete, export)
  sandbox    Sandbox configuration and diagnostics
  workflow   Workflow subcommand group (list, run, log, resume)
  skill      Inspect installed skill packages (list, show)
  target     Inspect the deployment-target registry (list, show)
  serve      Start serve mode: accept JSON-RPC requests over stdio
  check      Run pre-flight validation against the project (config, lockfile, packages, sandbox, plugins, skills, mcp-contracts, governance, dirs). Aggregates existing validators into one CI/IDE-friendly verb
  build      Build a deployment bundle from this project (Phase 2 §C.2), or compile a workflow to WebAssembly (`tau build wasm <project>`)
  mcp        Manage Model Context Protocol (MCP) server contracts
  dev        Hot-reload REPL driving the post-β.3 IR runtime
  embed      Emit host-embedding glue for a target language (Phase 2 §5.2)
  trace      Open the execution-trace waterfall TUI (M1) on a run's `.tau/runs/<id>.jsonl` file
  help       Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

      --no-sandbox
          Disable sandboxing entirely for this invocation (shorthand for `--sandbox passthrough`). For development and one-off debugging. Auditable in shell history

      --sandbox <SANDBOX>
          Force a specific sandbox adapter kind, overriding the resolver. `--no-sandbox` is shorthand for `--sandbox passthrough`. Conflicts with `--no-sandbox` if both set

          Possible values:
          - native:      Linux landlock + seccomp + namespaces
          - container:   Docker / Podman shell-out
          - passthrough: No isolation (explicit opt-out)

      --log-non-blocking
          Write logs through a non-blocking MPSC channel (high-throughput). Requires `--log-file`. Env: `TAU_LOG_NON_BLOCKING=1`
          
          [env: TAU_LOG_NON_BLOCKING=]

      --log-file <PATH>
          Write logs to the given file instead of stderr. Required when `--log-non-blocking` is set. Env: `TAU_LOG_FILE`
          
          [env: TAU_LOG_FILE=]

      --log-rotation <LOG_ROTATION>
          Log file rotation policy. Ignored unless `--log-file` is set. Env: `TAU_LOG_ROTATION`

          Possible values:
          - never:  No rotation — append forever to a single file
          - daily:  Roll over each day at UTC midnight (filename gains a date suffix)
          - hourly: Roll over each hour (filename gains a date+hour suffix)
          
          [env: TAU_LOG_ROTATION=]
          [default: never]

      --otlp-endpoint <URL>
          Export traces over OTLP/gRPC to this endpoint, e.g. `https://otel.example.com:4317`. Falls back to `OTEL_EXPORTER_OTLP_ENDPOINT` env var. Auth + tenant headers come from `OTEL_EXPORTER_OTLP_HEADERS` (comma-separated `key=value` pairs). Requires the `otlp` cargo feature (on by default)
          
          [env: OTEL_EXPORTER_OTLP_ENDPOINT=]

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
